--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,13 +3,28 @@ body {
     text-align: center;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
+/*HEADING */
 
+.header--secondary {
+    color: white;
+    font-weight: 300px;
+    font-size: 42px;
+}
+
+.header--sub-header {
+    color: grey;
+    font-weight: 300px;
+    font-size: 21px;
+
+}
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color:white;
 
 }
+/*LINKS*/
+
 
 .link--cta {
     font-size: 16px;
