--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,6 +28,15 @@ body {
 
 .link--cta {
     font-size: 16px;
-    color:aquamarine
+    color:aquamarine;
+
+}
+
+/*FOOTER*/
+
+.footer--copyright{
+    font-size: 21px;
+    color:gray;
+    text-align: right;
 
 }
